# hierarchical-attention-fusion-urban-scene-parsing

./: .gitignore  ARCHITECTURE.md  PROJECT_SUMMARY.md  README.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
results/: results.json
results/hierarchical_attention_fusion/: final_metrics.json
scripts/: evaluate.py  predict.py  train.py
src/hierarchical_attention_fusion_urban_scene_parsing/: __init__.py
src/hierarchical_attention_fusion_urban_scene_parsing/evaluation/: __init__.py  analysis.py  metrics.py
src/hierarchical_attention_fusion_urban_scene_parsing/training/: __init__.py  trainer.py
src/hierarchical_attention_fusion_urban_scene_parsing/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
